<resources>
    <string name="app_name">IFTTW</string>
    <string name="tab_text_1">New Routine</string>
    <string name="tab_text_2">Active Routine List</string>
    <string name="tab_text_3">Inactive Routine List</string>
    <string name="action_module_name_1">Notify Me</string>
    <string name="action_module_name_2">Turn WiFi On/Off</string>
    <string name="action_module_name_3">API</string>
    <string name="condition_module_name_1">Timer</string>
    <string name="condition_module_name_2">Sensors</string>
    <string name="condition_module_name_3">API</string>
    <string name="new_routine_text1">IF</string>
    <string name="new_routine_button1_text">THIS</string>
    <string name="new_routine_text2">THEN</string>
    <string name="new_routine_button2_text">WHAT?</string>
    <string-array name="timer_array">
        <item>Once</item>
        <item>Everyday</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="routine_name_text">Routine Name</string>
    <string name="select_action_module_text">Select Action Module</string>
    <string name="select_condition_module_text">Select Condition Module</string>
    <string name="proximity_is">Proximity is…</string>
    <string name="near">Near</string>
    <string name="far">Far</string>
    <string name="something">SOMETHING</string>
    <string name="is"> IS </string>
    <string name="wrong">WRONG</string>
    <string name="accelerometer_isn_t_supported_yet">Accelerometer isn\'t supported (yet)</string>
    <string name="turn_wifi">Turn WiFi</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="made_with_love"><![CDATA[Made with <3]]></string>
    <string name="delete_routine_button">Delete</string>
    <string name="channel_name">Notify_me</string>
    <string name="channel_description">notify channel for notify me service</string>
    <string name="once_timer_condition_type">oneTimer</string>
    <string name="repeating_timer_condition_type">repeatingTimer</string>
    <string name="set_timer">Set Timer</string>
    <string name="deactivate">Deactivate</string>
    <string name="activate">Activate</string>

</resources>
