<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/new_routine_text1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/thisButton"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#F44336"
                android:text="@string/new_routine_button1_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#1C2463"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/new_routine_text2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/whatButton"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#F44336"
                android:text="@string/new_routine_button2_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#1C2463"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="275dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/routine_name_text"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addRoutine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/fab_margin"
                    app:backgroundTint="#C7EBA9"
                    app:srcCompat="@android:drawable/ic_input_add" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>